# sca-kitchen-sink

./: .gitignore  LICENSE  README.md
csharp/nuget/: Program.cs  nuget-demo.csproj  packages.lock.json
golang/gomod/: go.mod  go.sum  main.go
java/gradle/: build.gradle  gradle.lockfile
java/maven/: pom.xml
java/maven/src/main/java/com/vulnerable/: App.java
java/maven/src/main/resources/: hibernate.cfg.xml
javascript/: index.js  package.json  pnpm-lock.yaml
javascript/npm/: index.js  package-lock.json  package.json
javascript/pnpm/: package.json  pnpm-lock.yaml
javascript/yarn/: .pnp.cjs  package.json
php/composer/: composer.json  index.php
python/poetry/: app.py  pyproject.toml
python/requirements/: requirements.in  requirements.txt  script.py
ruby/rubygems/: Gemfile  vulnerable.rb
rust/cargo/: Cargo.toml
rust/cargo/src/: main.rs
