[tool.poetry]
name = "vulnerable-python"
version = "0.1.0"
description = "Demo of vulnerable Python dependencies"
authors = ["Security Researcher <researcher@example.com>"]

[tool.poetry.dependencies]
python ="^3.10"
Flask = "1.0.2"
PyYAML = "5.3.1"
requests = "2.19.1"
SQLAlchemy = "1.3.0"
Werkzeug = "0.15.3"
Jinja2 = "2.10.1"
urllib3 = ">=1.21.1,<1.24"
cryptography = "43.0.0"
